docs: add docs for update opening
